crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@282.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select insert_tt('bar');"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..22
      Ident@7..16 "insert_tt"
      Ascii40@16..17 "("
      AConst@17..22
        Sconst@17..22 "'bar'"
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

