crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@285.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select insert_tt('fool');"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    FuncCall@7..23
      Ident@7..16 "insert_tt"
      Ascii40@16..17 "("
      AConst@17..23
        Sconst@17..23 "'fool'"
  Ascii41@23..24 ")"
  Ascii59@24..25 ";"

