crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@289.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from insert_tt2('baz','quux');"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..37
    List@14..37
      FuncCall@14..37
        Ident@14..24 "insert_tt2"
        Ascii40@24..25 "("
        AConst@25..30
          Sconst@25..30 "'baz'"
        Ascii44@30..31 ","
        AConst@31..37
          Sconst@31..37 "'quux'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

