crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from array_to_set(array['one', 'two']);"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..45
    List@14..45
      FuncCall@14..45
        Ident@14..26 "array_to_set"
        Ascii40@26..27 "("
        AArrayExpr@27..45
          Array@27..32 "array"
          Ascii91@32..33 "["
          AConst@33..38
            Sconst@33..38 "'one'"
          Ascii44@38..39 ","
          Whitespace@39..40 " "
          AConst@40..45
            Sconst@40..45 "'two'"
  Ascii93@45..46 "]"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

